worked on the menu

--- a/products.html
+++ b/products.html
@@ -65,10 +65,10 @@
         <nav id="navbar" class="navbar">
           <ul class="mx-auto">
             <li>
-              <a class="nav-link scrollto active" href="index.html">Home</a>
+              <a class="nav-link scrollto " href="index.html">Home</a>
             </li>
-            <li><a class="nav-link scrollto" href="products.html">Products</a></li>
-            <li><a class="nav-link scrollto" href="#about">About Us</a></li>
+            <li><a class="nav-link scrollto active" href="products.html">Products</a></li>
+            <li><a class="nav-link scrollto" href="about.html">About Us</a></li>
             <li>
               <a class="nav-link scrollto" href="support.html">Support</a>
             </li>
