--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/css">
+
     <title>Neelux | Uganda</title>
     <link
   href="http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600"
@@ -71,48 +73,66 @@
     <link rel="stylesheet" href="./assets/css/style.css">
    
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <style>
+      .jumbotron {
+        margin-bottom: 0;
+      }
+      .navbar {
+        margin-bottom: 0;
+      }
+      .navbar-brand {
+        font-size: 30px;
+        font-weight: bold;
+        color: white;
+      }
+      .navbar-nav a {
+        font-size: 18px;
+        color: white;
+      }
+      .nav-item.active {
+        background-color: white;
+        color: black;
+      }
+      .dropdown-menu {
+        background-color: #343a40;
+        border: none;
+      }
+      .dropdown-item {
+        font-size: 18px;
+        color: white;
+      }
+    </style>
   </head>
   <body>
       <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
-
-      <div class="logo">
-        <h1><a href="index.html">Neelux</a></h1>
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+        <a class="navbar-brand" href="#">NEELUX</a>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="products.html">Products</a></li>
-          <li><a class="nav-link scrollto" href="#services">About Us</a></li>
-          <li><a class="nav-link scrollto " href="support.html">Support</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-      <div class="search">
-        <button class="search-btn"><i class="bi bi-search"></i></button>
-        <form class="search-form">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">
-            Search
-          </button>
-        </form>
-    </div>
-  </header><!-- End Header -->
+                  <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Support</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Contact Us</a>
+                <a class="dropdown-item" href="#">Privacy Policy</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
     
     <div class="slider-area">
         	<!-- Slider -->
@@ -131,9 +151,9 @@
 					<li><img src="./assets/img/coursel/TABLE.jpeg" alt="Slide">
 						<div class="caption-group">
 							<h2 class="caption title">
-								BRONZE <span class="primary">TABLE <strong>LAMPS</strong></span>
+								<span class="primary">TABLE <strong>LAMPS</strong></span>
 							</h2>
-							<h4 class="caption subtitle">TABLE LIGHT*</h4>
+							<!-- <h4 class="caption subtitle">TABLE LIGHT*</h4> -->
 							<a class="caption button-radius" href="#"><span class="icon"></span>Details</a>
 						</div>
 					</li>
@@ -159,7 +179,7 @@
           <li><img src="./assets/img/coursel/FLOOD.jpeg" alt="Slide">
 						<div class="caption-group">
 							<h2 class="caption title">
-								SOLAR<span class="primary">FLOOD <strong>LIGHT</strong></span>
+								DC <span class="primary">FLOOD <strong>LIGHT</strong></span>
 							</h2>
 							<!-- <h4 class="caption subtitle">Select Item</h4> -->
 							<a class="caption button-radius" href="#"><span class="icon"></span>Details</a>
@@ -168,7 +188,7 @@
 					<li><img src="./assets/img/coursel/STREET.jpeg" alt="Slide">
 						<div class="caption-group">
 						  <h2 class="caption title">
-								SOLAR <span class="primary">STREET <strong>LIGHTS</strong></span>
+							DC<span class="primary"> STREET <strong>LIGHTS</strong></span>
 							</h2>
 							<!-- <h4 class="caption subtitle">& Phone</h4> -->
 							<a class="caption button-radius" href="#"><span class="icon"></span>Details</a>
@@ -351,13 +371,13 @@
                 <h4>Useful Links</h4>
                 <ul>
                   <li>
-                    <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                    <i class="bx bx-chevron-right"></i> <a href="index.html">Home</a>
                   </li>
                   <li>
-                    <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                    <i class="bx bx-chevron-right"></i> <a href="about.html">About us</a>
                   </li>
                   <li>
-                    <i class="bx bx-chevron-right"></i> <a href="#">Products</a>
+                    <i class="bx bx-chevron-right"></i> <a href="products.html">Products</a>
                   </li>
                   <li>
                     <i class="bx bx-chevron-right"></i> <a href="support.html">Support</a>
@@ -472,11 +492,8 @@
 
 
 
-
   <!-- Template Main JS File -->
   <script src="/js/main.js"></script>
-
-  <script src="assets/js/main.js"></script>
          <!-- Latest jQuery form server -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
 
@@ -486,10 +503,7 @@
     <!-- jQuery sticky menu -->
     <script src="./assets/js/owl.carousel.min.js"></script>
     <script src="./assets/js/jquery.sticky.js"></script>
-
-    <!-- jQuery easing -->
-    <script src="./assets/js/jquery.easing.1.3.min.js"></script>
-
+    
     <!-- Main Script -->
     <script src="/assets/js/main.js"></script>
 
@@ -498,25 +512,4 @@
     <script type="text/javascript" src="./assets/js/script.slider.js"></script>
 </body>
 
-</html>         <!-- Latest jQuery form server -->
-    <script src="https://code.jquery.com/jquery.min.js"></script>
-
-    <!-- Bootstrap JS form CDN -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-    <!-- jQuery sticky menu -->
-    <script src="./assets/js/owl.carousel.min.js"></script>
-    <script src="./assets/js/jquery.sticky.js"></script>
-
-    <!-- jQuery easing -->
-    <script src="./assets/js/jquery.easing.1.3.min.js"></script>
-
-    <!-- Main Script -->
-    <script src="/assets/js/main.js"></script>
-
-    <!-- Slider
-    <script type="text/javascript" src="./assets/js/bxslider.min.js"></script>
-    <script type="text/javascript" src="./assets/js/script.slider.js"></script> -->
-</body>
-
-</html>
+</html>     
