--- a/test.html
+++ b/test.html
@@ -13,6 +13,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'><link rel="stylesheet" href="./style.css">
+  
       <!-- Template Main CSS File -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -33,7 +37,7 @@
      <link rel="stylesheet" href="./css/style.css">
      <link rel="stylesheet" href="./css/footer.css">
 
-  
+     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     
 
 <!-- Favicons -->
@@ -103,140 +107,166 @@
     </ul>
   </div>
 </nav>
-<!-- Carousel -->
-<div class="container mt-5">
-  <div class="row row-cols-1 row-cols-md-4 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="./assets/img/floods/downlight-recess.jpeg" class="card-img-top" alt="Product 1">
-        <div class="card-body">
-          <h5 class="card-title">DOWN LIGHTS</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="  " class="card-img-top" alt="Product 2">
-        <div class="card-body">
-          <h5 class="card-title">LED BULB</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="" class="card-img-top" alt="Product 3" width="375" height="125">
-        <div class="card-body">
-          <h5 class="card-title">Panel</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product4.jpg" class="card-img-top" alt="Product 4">
-        <div class="card-body">
-          <h5 class="card-title">Product 4</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container mt-5">
-  <div class="row row-cols-1 row-cols-md-4 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="product1.jpg" class="card-img-top" alt="Product 1">
-        <div class="card-body">
-          <h5 class="card-title">Product 1</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product2.jpg" class="card-img-top" alt="Product 2">
-        <div class="card-body">
-          <h5 class="card-title">Product 2</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product3.jpg" class="card-img-top" alt="Panel">
-        <div class="card-body">
-          <h5 class="card-title">PANEL LAMPS</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product4.jpg" class="card-img-top" alt="Product 4">
-        <div class="card-body">
-          <h5 class="card-title">Product 4</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container mt-5">
-  <div class="row row-cols-1 row-cols-md-4 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="product1.jpg" class="card-img-top" alt="Product 1">
-        <div class="card-body">
-          <h5 class="card-title">Product 1</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product2.jpg" class="card-img-top" alt="Product 2">
-        <div class="card-body">
-          <h5 class="card-title">Product 2</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product3.jpg" class="card-img-top" alt="Product 3">
-        <div class="card-body">
-          <h5 class="card-title">Product 3</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="product4.jpg" class="card-img-top" alt="Product 4">
-        <div class="card-body">
-          <h5 class="card-title">Product 4</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Details</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
+<!-- partial:index.partial.html -->
+<section class="section-products">
+  <div class="container">
+      <div class="row justify-content-center text-center">
+          <div class="col-md-8 col-lg-6">
+              <div class="header">
+                  <h3>Featured Product</h3>
+                  <h2>Popular Products</h2>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-1" class="single-product">
+                  <div class="part-1">
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-old-price">$79.99</h4>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-2" class="single-product">
+                  <div class="part-1">
+                      <span class="discount">15% off</span>
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-3" class="single-product">
+                  <div class="part-1">
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-old-price">$79.99</h4>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-4" class="single-product">
+                  <div class="part-1">
+                      <span class="new">new</span>
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-1" class="single-product">
+                  <div class="part-1">
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-old-price">$79.99</h4>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-2" class="single-product">
+                  <div class="part-1">
+                      <span class="discount">15% off</span>
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-3" class="single-product">
+                  <div class="part-1">
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-old-price">$79.99</h4>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+          <!-- Single Product -->
+          <div class="col-md-6 col-lg-4 col-xl-3">
+              <div id="product-4" class="single-product">
+                  <div class="part-1">
+                      <span class="new">new</span>
+                      <ul>
+                          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                          <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                          <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                      </ul>
+                  </div>
+                  <div class="part-2">
+                      <h3 class="product-title">Here Product Title</h3>
+                      <h4 class="product-price">$49.99</h4>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 
 
      <!-- ======= Footer ======= -->
