more products page

--- a/products/test.html
+++ b/products/test.html
@@ -239,101 +239,61 @@ h1, h2, h3, h4, h5, h6 {
 <br/>
 <br/>
 <center>
-  <h1>LED BULBS</h1>
+  <h1>LED TRACK LIGHTS</h1>
     <br>               
     <div class="w3-cell-row">
       <div class="w3-container w3-red w3-cell w3-cell-top">
-        
-        <a href="./img/bulbs/a-se.jpeg">
+        <br>
+        <a href="./img/tracks/1.jpeg">
           <div class="w3-display-container w3-text-white">
-            <img src="./img/bulbs/a-se.jpeg" alt="Lights" style="width:300px"> 
+            <img src="./img/tracks/1.jpeg" alt="Lights" style="width:300px"> 
           </div>
         </a>
-        <h4>A - LED BULB </h4>
-        <p>B22 and E27 Available</p>
+        <h4>TRACK LIGHTS </h4>
+        <p>BL and WH Available</p>
       </div>
-      <div class="w3-container w3-green w3-cell w3-cell-middle">
-        <a href="./img/bulbs/t-se.jpeg">
-          <div class="w3-display-container w3-text-white">
-            <img src="./img/bulbs/t-se.jpeg" alt="Lights" style="width:300px">
-            <div class="w3-xlarge w3-display-bottomleft w3-padding"></div>
-          </div>
-        </a>
-        <h4>T - LED BULB</h4>
-        <p>B22 and E27 Available</p>
-      </div>
-      <div class="w3-container w3-blue w3-cell w3-cell-bottom">
-        <a href="./img/bulbs/mosquito bulb.jpeg">
-          <div class="w3-display-container w3-text-white">
-            <img src="./img/bulbs/mosquito bulb.jpeg" alt="Lights" style="width:300px">
-            <div class="w3-xlarge w3-display-bottomleft w3-padding"></div>
-          </div>
-        </a>
-        <h4>MOSQUITO KILLER</h4>
-        <p>B22 Available</p>
-      </div>
-    </div>
-    
-<br>
-  <div class="w3-cell-row">
-    <div class="w3-container w3-red w3-cell w3-cell-top">
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-green w3-cell w3-cell-middle">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-blue w3-cell w3-cell-bottom">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-  </div>
-<br>
-  <div class="w3-cell-row">
-    <div class="w3-container w3-red w3-cell w3-cell-top">
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-green w3-cell w3-cell-middle">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-blue w3-cell w3-cell-bottom">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-  </div>
-  <br>
-  <div class="w3-cell-row">
-    <div class="w3-container w3-red w3-cell w3-cell-top">
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-green w3-cell w3-cell-middle">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-blue w3-cell w3-cell-bottom">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-  </div><br>
-  <div class="w3-cell-row">
-    <div class="w3-container w3-red w3-cell w3-cell-top">
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-green w3-cell w3-cell-middle">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-    <div class="w3-container w3-blue w3-cell w3-cell-bottom">
-      <p>Hello W3.CSS Layout.</p>
-    </div>
-  </div>
 
+      <div class="w3-container w3-blue w3-cell w3-cell-bottom">
+        <br>
+        <a href="./img/tracks/4.jpeg">
+          <div class="w3-display-container w3-text-white">
+            <img src="./img/tracks/4.jpeg" alt="Lights" style="width:300px">
+            <div class="w3-xlarge w3-display-bottomleft w3-padding"></div>
+          </div>
+        </a>
+        <h4>TRACK LIGHTS </h4>
+        <p>BL and WH Available</p>
+      </div>
+    </div>
+<br>
+ <div class="w3-cell-row">
+
+  <br>               
+  <div class="w3-cell-row">
+    <div class="w3-container w3-red w3-cell w3-cell-top">
+      <br>
+      <a href="./img/bulbs/spotlight-long.jpeg">
+        <div class="w3-display-container w3-text-white">
+          <img src="./img/bulbs/spotlight-long.jpeg" alt="Lights" style="width:300px"> 
+        </div>
+      </a>
+      <h4>TRACK LIGHTS </h4>
+      <p>BL and WH Available</p>
+    </div>
+
+    <div class="w3-container w3-blue w3-cell w3-cell-bottom">
+      <br>
+      <a href="./img/bulbs/spot-short.jpeg">
+        <div class="w3-display-container w3-text-white">
+          <img src="./img/bulbs/spot-short.jpeg" alt="Lights" style="width:300px">
+          <div class="w3-xlarge w3-display-bottomleft w3-padding"></div>
+        </div>
+      </a>
+      <h4>TRACK LIGHTS </h4>
+      <p>BL and WH Available</p>
+    </div>
+  </div>
+   
 
         <!-- ======= Footer ======= -->
         <footer id="footer">
@@ -384,23 +344,23 @@ h1, h2, h3, h4, h5, h6 {
                       <ul>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./flood.html">Flood Lights</a>
+                          <a href="../products/flood.html">Flood Lights</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./street.html">Street Lights</a>
+                          <a href="../products/street.html">Street Lights</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                           <a href="./led_bulb.html">Bulbs</a>
+                           <a href="../products/led_bulb.html">LED Bulbs</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./strip.html">Strip Light</a>
+                          <a href="../products/strip.html">Strip Light</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./track.html">Track lights</a>
+                          <a href="../products/track.html">Track lights</a>
                         </li>
                       </ul>
                     </div>
@@ -408,23 +368,23 @@ h1, h2, h3, h4, h5, h6 {
                       <ul>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./ceilin.html">Ceiling Lights</a>
+                          <a href="../products/ceilin.html">Ceiling Lights</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./wall.html">Wall Lamps</a>
+                          <a href="../products/wall.html">Wall Lamps</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./chandelier.html">Chandeliers</a>
+                          <a href="../products/chandelier.html">Chandeliers</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./down.html">Panel Lamps</a>
+                          <a href="../products/down.html">Panel Lamps</a>
                         </li>
                         <li>
                           <i class="bx bx-chevron-right"></i>
-                          <a href="./tubes.html">Led Tubes</a>
+                          <a href="../products/tubes.html">Led Tubes</a>
                         </li>
                       </ul>
                     </div>
