--- a/products/test.html
+++ b/products/test.html
@@ -239,9 +239,38 @@ h1, h2, h3, h4, h5, h6 {
 <br/>
 <br/>
 <center>
-  <h1>LED TRACK LIGHTS</h1>
-    <br>               
-    <div class="w3-cell-row">
+  <h1>WALL LAMPS</h1>
+</center>
+    <br>
+    <div class="col-sm-5">
+      <a href="./img/walls/wall.jpeg">
+        <div class="w3-display-container w3-text-white">
+          <img src="./img/walls/wall.jpeg" alt="Lights" style="width:300px"> 
+        </div>
+      </a>
+      <h4>WALL LAMP </h4>
+    </div>
+        <!-- <div class="col-sm-3">
+          <a href="./img/bulbs/spot-short.jpeg">
+            <div class="w3-display-container w3-text-white">
+              <img src="./img/bulbs/spot-short.jpeg" alt="Lights" style="width:300px">
+              <div class="w3-xlarge w3-display-bottomleft w3-padding"></div>
+            </div>
+          </a>
+          <h4>TRACK LIGHTS </h4>
+          <p>BL and WH Available</p>
+        </div> -->
+    <br>    
+    <div class="row">
+      <div class="col-sm-1"></div>
+      
+
+      <div class="col-sm-3"></div>
+    </div>
+    
+
+
+    <!-- <div class="w3-cell-row">
       <div class="w3-container w3-red w3-cell w3-cell-top">
         <br>
         <a href="./img/tracks/1.jpeg">
@@ -266,10 +295,10 @@ h1, h2, h3, h4, h5, h6 {
       </div>
     </div>
 <br>
- <div class="w3-cell-row">
+ <div class="w3-cell-row"> -->
 
   <br>               
-  <div class="w3-cell-row">
+  <!-- <div class="w3-cell-row">
     <div class="w3-container w3-red w3-cell w3-cell-top">
       <br>
       <a href="./img/bulbs/spotlight-long.jpeg">
@@ -293,7 +322,7 @@ h1, h2, h3, h4, h5, h6 {
       <p>BL and WH Available</p>
     </div>
   </div>
-   
+    -->
 
         <!-- ======= Footer ======= -->
         <footer id="footer">
