--- a/products/test.html
+++ b/products/test.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="../css/style.css">
+      <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
@@ -30,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_section">
+      <div class="header_sec">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
