--- a/products/test.html
+++ b/products/test.html
@@ -90,20 +90,20 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <div class="banner_section layout_padding">
+         <!-- <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/bulbs/a-se.jpeg"></div>
+                              <div class="banner_img"><img src="img/chandelier/header/dl-020.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">LED BULBS </h1>
+                                 <h1 class="banner_taital">CHANDELIERS</h1>
                                  <h5 class="tasty_text">THE BEST</h5>
-                                 <p class="banner_text">ALL COLOURS </p>
+                                 <p class="banner_text">DESIGNS </p>
                               </div>
                            </div>
                         </div>
@@ -111,14 +111,14 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/bulbs/t-se.jpeg"></div>
+                              <div class="banner_img"><img src="img/chandelier/header/dl-039.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
                                 <div class="banner_taital_main">
-                                  <h1 class="banner_taital">LED BULBS </h1>
-                                  <h5 class="tasty_text">THE BEST</h5>
-                                  <p class="banner_text">ALL COLOURS </p>
+                                 <h1 class="banner_taital">CHANDELIERS</h1>
+                                 <h5 class="tasty_text">THE BEST</h5>
+                                 <p class="banner_text">DESIGNS </p>
                                </div>
                               </div>
                            </div>
@@ -127,13 +127,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/bulbs/football bulbs.jpg"></div>
+                              <div class="banner_img"><img src="img/chandelier/header/dl-043.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital">LED BULBS </h1>
-                              <h5 class="tasty_text">THE BEST</h5>
-                              <p class="banner_text">ALL COLOURS </p>
+                              <h1 class="banner_taital">CHANDELIERS</h1>
+                                 <h5 class="tasty_text">THE BEST</h5>
+                                 <p class="banner_text">DESIGNS </p>
                            </div>
                               </div>
                            </div>
@@ -148,7 +148,7 @@
                   </a>
                </div>
             </div>
-         </div>
+         </div> -->
          <!-- banner section end -->
       </div>
       <!-- header section end -->
@@ -167,20 +167,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/7w bulb.jpeg"></div>
-                              <h3 class="types_text">LED BULB (PIN)</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl16.jpg"></div>
+                              <h3 class="types_text">DL-0016</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/fan bulb.jpg"></div>
-                              <h3 class="types_text">LED FAN BULB</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl17.jpg"></div>
+                              <h3 class="types_text">DL-0017</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/mosquito bulb.jpg"></div>
-                              <h3 class="types_text">LED MOSQUITO KILLER BULB</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl20.jpg"></div>
+                              <h3 class="types_text">DL-0020</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/5w bulb.jpg"></div>
-                              <h3 class="types_text">LED BULB (SCREW)</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl23.jpg"></div>
+                              <h3 class="types_text">DL-0023</h3>
                            </div>
                         </div>
                      </div>
