--- a/products/test.html
+++ b/products/test.html
@@ -189,20 +189,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/rotating bulb.jpg"></div>
-                              <h3 class="types_text">LED RGB ROTATING BULB</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl25.jpg"></div>
+                              <h3 class="types_text">DL-0025</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/display/7wr.jpg"></div>
-                              <h3 class="types_text">LED RECHARGEABLE BULB</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl34.jpg"></div>
+                              <h3 class="types_text">DL-0034</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/display/music.jpg"></div>
-                              <h3 class="types_text">LED RGB MUSIC BULB</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl38.jpg"></div>
+                              <h3 class="types_text">DL-0038</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/bulbs/fd.jpg"></div>
-                              <h3 class="types_text">LED LAMP</h3>
+                              <div class="coffee_img"><img src="img/chandelier/dl39.jpg"></div>
+                              <h3 class="types_text">DL-0039</h3>
                            </div>
                         </div>
                      </div>
