chandelier page done

--- a/products/test.html
+++ b/products/test.html
@@ -90,7 +90,7 @@
             </nav>
          </div>
          <!-- banner section start --> 
-         <!-- <div class="banner_section layout_padding">
+         <div class="banner_section layout_padding">
             <div class="container">
                <div id="banner_slider" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
@@ -148,7 +148,7 @@
                   </a>
                </div>
             </div>
-         </div> -->
+         </div>
          <!-- banner section end -->
       </div>
       <!-- header section end -->
@@ -207,32 +207,30 @@
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="carousel-item">
+                  <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
-                           <div class="col-lg-3 col-md-6">
+                           <!-- <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/wl4.jpeg"></div>
                               <h3 class="types_text">WALL LAMPS</h3>
                               <div class="read_bt"><a href="#">Check it</a></div>
+                           </div> -->
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="./img/chandelier/dl42.jpg"></div>
+                              <h3 class="types_text">DL-0042</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/solar street grey.jpeg"></div>
-                              <h3 class="types_text">SOLAR STREET LIGHT</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="coffee_img"><img src="./img/chandelier/dl43.jpg"></div>
+                              <h3 class="types_text">DL-0043</h3>
                            </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/flood30.jpg"></div>
-                              <h3 class="types_text">SOLAR FLOODLIGHT</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
+                           <!-- <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/3.jpeg"></div>
                               <h3 class="types_text">STRIP LIGHTS</h3>
                               <div class="read_bt"><a href="#">Check it</a></div>
-                           </div>
+                           </div> -->
                         </div>
                      </div>
-                  </div> -->
+                  </div>
                </div>
                <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
